# data-etl-dagster

./: .env.ci  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  debug_headers.py  docker-compose.yaml  env.example  pytest.ini  requirements-test.txt  requirements.txt
.agent/rules/: general.md
.cursor/rules/: README.md  general.mdc  general.mdc.example  mcp.mdc.example  os-venv.mdc.example
.github/workflows/: AGENTS.md  _e2e-tests.yml  _integration-etl.yml  _integration-infra.yml  _integration-webapp.yml  _unit-tests.yml  ci.yml  integration.yml
configs/: AGENTS.md  CONTEXT.md
docs/agents/: README.md  architecture.md  pipelines.md  platform.md  testing.md
libs/: __init__.py  normalization.py  pyproject.toml  s3_utils.py
libs/models/: AGENTS.md  CONTEXT.md  __init__.py  activity.py  asset.py  base.py  config.py  manifest.py  provenance.py  run.py  spatial.py
libs/spatial_utils/: AGENTS.md  CONTEXT.md  __init__.py  schema_mapper.py  tabular_headers.py
libs/transformations/: AGENTS.md  CONTEXT.md  README.md  __init__.py  base.py  registry.py  vector.py
scripts/: AGENTS.md  README.md  check_container_stability.py  generate_migration_schema.py  migrate_db.py  reset_mongodb.py  wait_for_services.py
services/dagster/: AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.user-code  README.md  dagster.yaml  requirements-user-code.txt  requirements.txt  workspace.yaml
services/minio/: AGENTS.md  CONTEXT.md
services/mongodb/: AGENTS.md  CONTEXT.md  README.md
services/postgis/: AGENTS.md  CONTEXT.md
tests/: AGENTS.md  CONTEXT.md  __init__.py  conftest.py
(+187 files in other folders)
