[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-etl-libs"
version = "0.1.0"
description = "Shared libraries for the Spatial ETL Pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "nltk>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "spatial_utils", "transformations"]
